<resources>
    <string name="app_name">MyDevice</string>
    <string name="logo_painel_head_app">Logo do painel head do app</string>
    <string name="my_device">Meu Dispositivo</string>
    <string name="manufacturer">Fabricante</string>
    <string name="model">Modelo</string>
    <string name="version_android">Android X</string>
    <string name="api_nivel">API Nível</string>
    <string name="image_painel_hardware_app">Logo do painel hardware do app</string>
    <string name="image_painel_rede_app">Logo do painel rede do app</string>
    <string name="name_cpu">Nome da CPU</string>
    <string name="architecture">Arquitetura da CPU</string>
    <string name="total_memory">Memória RAM</string>
    <string name="text_example_tablet_view">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut faucibus auctor massa non commodo. Suspendisse eu dui eu nisi laoreet efficitur. In accumsan pretium enim et laoreet. Integer vehicula nisi urna, quis blandit nibh interdum at. Nunc molestie ligula eget fermentum mattis. Nam tortor ligula, commodo vitae erat ac, semper iaculis enim. Fusce eget cursus quam. Maecenas aliquam libero at ante aliquam, sed viverra felis convallis. Nulla facilisi. \n
        Sed tellus massa, aliquet vitae vulputate ac, placerat vitae urna. Aliquam molestie metus ut orci laoreet, et accumsan nunc rhoncus. Mauris euismod diam at finibus auctor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nam sed consectetur ipsum. Duis aliquet enim vel tempor vestibulum. Aenean sollicitudin cursus mauris, id condimentum orci tristique vitae. Integer rhoncus, enim quis hendrerit cursus, lectus nibh sollicitudin sapien, nec volutpat tellus mi nec arcu. Integer id pharetra turpis, a semper augue. Maecenas purus turpis, sodales non ornare quis, tempus non dui. Duis venenatis arcu vulputate orci suscipit, posuere consectetur augue posuere. Fusce volutpat, leo id congue tristique, odio nisl lobortis sem, non aliquet ipsum neque quis dui. Nulla facilisi. Vivamus nisi metus, tempor quis imperdiet sit amet, facilisis ut magna. \n
        Nulla a egestas lectus, in tristique ante. Sed sit amet scelerisque est, id elementum augue. Donec at risus porttitor, finibus velit at, imperdiet nisl. Ut euismod tincidunt enim, eget ullamcorper turpis venenatis vel. Sed in orci non eros viverra aliquet sed eu magna. Mauris in posuere velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed quam consectetur, feugiat lacus a, iaculis dui. Mauris et risus sollicitudin, faucibus magna eu, sollicitudin ligula. Integer euismod dui tortor, sed euismod purus gravida vitae. Vestibulum sed scelerisque ipsum. Vestibulum a orci elit. \n
        Cras vitae purus volutpat nisl porta iaculis. Morbi sem est, facilisis eget feugiat non, posuere tristique sem. Nunc at consequat orci. Fusce malesuada, felis ut pellentesque dapibus, mauris nibh efficitur leo, sed consequat purus purus vitae nunc. Mauris eget consectetur mi. Sed auctor, est quis ultrices sodales, nisi felis euismod nibh, at dignissim turpis magna at odio. Sed commodo lacus quis quam gravida malesuada. \n
        Nullam ac sapien id leo semper ultrices. Pellentesque ut sodales nisi, luctus rutrum sapien. In posuere, magna eget sodales aliquet, leo turpis pharetra neque, sed vulputate sem augue nec orci. Aenean maximus, nisl eu facilisis varius, nisi tortor tincidunt purus, a aliquet nisi augue tincidunt magna. Ut ac nisl eu massa feugiat aliquet. Sed egestas urna eu erat auctor posuere. Sed rutrum lectus neque, fringilla condimentum lorem porttitor facilisis. Ut euismod ornare est quis varius. Cras euismod, lacus eu facilisis aliquet, dolor est volutpat dui, sed dignissim massa est et lacus. \n
        Sed malesuada sodales odio, facilisis egestas elit elementum in. Vivamus a interdum ipsum. Donec vel pellentesque diam, eu fringilla arcu. Praesent ac sapien accumsan, consectetur libero et, feugiat est. Phasellus luctus, nisi sit amet mattis tincidunt, orci leo venenatis est, ac egestas sapien quam at erat. Fusce eget mi eu purus viverra molestie quis vitae ligula. Vivamus et rhoncus urna, vitae tempor dui. Donec semper accumsan leo, posuere dictum libero pellentesque sit amet. Vivamus et fermentum neque. Curabitur tortor dui, condimentum eget auctor eu, dignissim at dolor. Cras iaculis magna ut sodales sollicitudin. Donec vestibulum tristique commodo. Vivamus dui risus, bibendum quis fermentum eget, consectetur et tellus. \n
        Duis semper ligula massa, id condimentum eros hendrerit at. Suspendisse eleifend sagittis risus, quis maximus augue efficitur id. Suspendisse sed venenatis diam. Praesent ultricies, mauris at suscipit blandit, ligula dui euismod velit, sit amet egestas ex lectus ut diam. Donec non dignissim ex, ut lacinia orci. Donec tincidunt lacus sit amet odio venenatis venenatis. Proin id ultricies justo, quis pellentesque metus. Curabitur vulputate accumsan semper.
    </string>
</resources>